// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hMR - Rspack Platform > should work with rspack 1`] = `
"import { hmrAccept as __$hmrAccept$__ } from "virtual:essor-hmr";
import { createHMRComponent as __$createHMRComponent$__ } from "virtual:essor-hmr";
import { template as _template$, child as _child$, next as _next$, insert as _insert$ } from "essor";
var _t$3 = _template$("<div><!><!></div>");
var _t$2 = _template$("<div>Bar</div>");
var _t$ = _template$("<div>Foo</div>");
import { createApp } from "essor";
function Foo() {
    return _t$();
}
Foo.__signature = "1xlg7qu";
Foo.__hmrId = "urv0gf:Foo";
function Bar() {
    return _t$2();
}
Bar.__signature = "1x88ld0";
Bar.__hmrId = "urv0gf:Bar";
function App() {
    return function() {
        var _root$ = _t$3();
        var _n$ = _child$(_root$);
        var _n$2 = _next$(_n$, 1);
        _insert$(_root$, __$createHMRComponent$__(Foo, {}), _n$);
        _insert$(_root$, __$createHMRComponent$__(Bar, {}), _n$2);
        return _root$;
    }();
}
App.__signature = "5wjnx8";
App.__hmrId = "urv0gf:App";
createApp(__$createHMRComponent$__(App), "#root");
var __$registry$__ = [
    Foo,
    Bar,
    App
];
if (import.meta.hot) {
    var _hot;
    __$hmrAccept$__("rspack", import.meta.hot, __$registry$__);
    (_hot = import.meta.hot) === null || _hot === void 0 ? void 0 : _hot.accept();
}
"
`;

exports[`hMR - Rspack Platform > should work with rspack 2`] = `
"import { hmrAccept as __$hmrAccept$__ } from "virtual:essor-hmr";
import { createHMRComponent as __$createHMRComponent$__ } from "virtual:essor-hmr";
import { template as _template$, child as _child$, next as _next$, insert as _insert$ } from "essor";
var _t$3 = _template$("<div><!><!></div>");
var _t$2 = _template$("<div>B</div>");
var _t$ = _template$("<div>A</div>");
import { createApp } from 'essor';
export function ComponentA() {
    return _t$();
}
ComponentA.__signature = "1divye3";
ComponentA.__hmrId = "12f9iaq:ComponentA";
export var ComponentB = function() {
    return _t$2();
};
ComponentB.__signature = "y6w14u";
ComponentB.__hmrId = "12f9iaq:ComponentB";
export default function App() {
    return function() {
        var _root$ = _t$3();
        var _n$ = _child$(_root$);
        var _n$2 = _next$(_n$, 1);
        _insert$(_root$, __$createHMRComponent$__(ComponentA, {}), _n$);
        _insert$(_root$, __$createHMRComponent$__(ComponentB, {}), _n$2);
        return _root$;
    }();
}
App.__signature = "1crwd39";
App.__hmrId = "12f9iaq:App";
createApp(__$createHMRComponent$__(App), '#root');
var __$registry$__ = [
    ComponentA,
    ComponentB,
    App
];
if (import.meta.hot) {
    var _hot;
    __$hmrAccept$__("rspack", import.meta.hot, __$registry$__);
    (_hot = import.meta.hot) === null || _hot === void 0 ? void 0 : _hot.accept();
}
"
`;

exports[`hMR - Rspack Platform > should work with rspack 3`] = `
"import { hmrAccept as __$hmrAccept$__ } from "virtual:essor-hmr";
import { createHMRComponent as __$createHMRComponent$__ } from "virtual:essor-hmr";
import { template as _template$, child as _child$, next as _next$, insert as _insert$ } from "essor";
var _t$ = _template$("<div>Hello <!></div>");
import { createApp } from 'essor';
function PropsComponent(props) {
    return function() {
        var _root$ = _t$();
        var _n$ = _child$(_root$);
        var _n$2 = _next$(_n$, 1);
        _insert$(_root$, function() {
            return props.name;
        }, _n$2);
        return _root$;
    }();
}
PropsComponent.__signature = "1xietpz";
PropsComponent.__hmrId = "1q4f2mz:PropsComponent";
createApp(__$createHMRComponent$__(function() {
    return __$createHMRComponent$__(PropsComponent, {
        name: "World"
    });
}), '#root');
var __$registry$__ = [
    PropsComponent
];
if (import.meta.hot) {
    var _hot;
    __$hmrAccept$__("rspack", import.meta.hot, __$registry$__);
    (_hot = import.meta.hot) === null || _hot === void 0 ? void 0 : _hot.accept();
}
"
`;

exports[`hMR - Rspack Platform > should work with rspack 4`] = `
"import { hmrAccept as __$hmrAccept$__ } from "virtual:essor-hmr";
import { createHMRComponent as __$createHMRComponent$__ } from "virtual:essor-hmr";
import { template as _template$, child as _child$, next as _next$, insert as _insert$, delegateEvents as _delegateEvents$ } from "essor";
var _t$ = _template$("<div>Count: <!></div>");
import { createApp, signal } from 'essor';
function SignalComponent() {
    var count = signal(0);
    return function() {
        var _root$ = _t$();
        var _n$ = _child$(_root$);
        var _n$2 = _next$(_n$, 1);
        _root$["_$click"] = function() {
            return count.value++;
        };
        _insert$(_root$, function() {
            return count.value;
        }, _n$2);
        return _root$;
    }();
}
SignalComponent.__signature = "15fgcfq";
SignalComponent.__hmrId = "j9twu0:SignalComponent";
createApp(__$createHMRComponent$__(SignalComponent), '#root');
var __$registry$__ = [
    SignalComponent
];
_delegateEvents$([
    "click"
]);
if (import.meta.hot) {
    var _hot;
    __$hmrAccept$__("rspack", import.meta.hot, __$registry$__);
    (_hot = import.meta.hot) === null || _hot === void 0 ? void 0 : _hot.accept();
}
"
`;
